--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Check Yo' Self</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
+		<title>Check Yo' Self</title>
 </head>
 <body>
-	<header> 
-		<h1 class="header-title">CHECK <span>YO'</span> SELF</h1>
-		<img class="header_search-icon">
-		<input class="header_search-input" placeholder="Search">
-	</header>
-	<section class="nav_bar">
-		<h4 class="nav_task-title">Task Title</h4>
-		<input class="nav_task-title-input">
-		<h4 class="nav_task-item">Task Item</h4>
-		<input class="nav_task-item-input">
-		<button class="nav_make-task-list" type="button">Make Task List</button>
-		<button class="nav_clear-all" type="button">Clear All</button>
-		<button class="nav_filter" type="button">Filter By Urgency</button>
-	</section>
-	<section class="task_card-display">
-	</section>
+		<header> 
+				<h1 class="header__title">CHECK <span>YO'</span>SELF</h1>
+				<container class="header__search_container">
+						<img class="header__search_icon" src="icons/search.svg" alt="Search icon">
+						<input class="header__search_input" placeholder="Search">
+			</container>
+		</header>
+		<section class="nav">
+				<h4 class="nav__task_title">Task Title</h4>
+				<input class="nav__task_title_input">
+				<section class="nav__task_list">
+				</section>
+				<h4 class="nav__task_item">Task Item</h4>
+				<container class="nav__task_container">
+						<input class="nav__task_item_input">
+						<button class="nav__task_item_btn"><img class="nav__task_item_icon" src="icons/plus.svg">
+						</button>
+				</container>
+				<button class="nav__make_task_btn" type="button">Make Task List</button>
+				<button class="nav__clear_btn" type="button">Clear All</button>
+				<form class="nav__urgency_filter">
+						<button class="nav__filter_btn" type="button">Filter By Urgency</button>
+				</form>
+		</section>
+		<section class="task__card_display">
+				<h1 class="task__card_placeholder">View Your ToDo Lists Here!</h1>
+		</section>
 </body>
 <script src="todo-list.js"></script>
 <script src="main.js"></script> 
