Add function for disabling button

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 		</header>
 		<section class="nav">
 				<h4 class="nav__task_title">Task Title</h4>
-				<input class="nav__task_title_input">
+				<input class="input nav__task_title_input">
 				<section class="nav__task_list">
 				</section>
 				<h4 class="nav__task_item">Task Item</h4>
 				<container class="nav__task_container">
-						<input class="nav__task_item_input">
+						<input class="input nav__task_item_input">
 						<button class="nav__task_item_btn"><img class="nav__task_item_icon" src="icons/plus.svg">
 						</button>
 				</container>
