Adjust styling for todo cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<header> 
 				<h1 class="header__title">CHECK <span>YO'</span>SELF</h1>
 				<container class="header__search_container">
-						<img class="header__search_icon" src="icons/search.svg" alt="Search icon">
+						<img class="header__search_icon" src="icons/search.svg" alt="Magnifying glass search icon">
 						<input class="header__search_input" placeholder="Search">
 			</container>
 		</header>
@@ -21,7 +21,7 @@
 				<h4 class="nav__task_item">Task Item</h4>
 				<container class="nav__task_container">
 						<input class="input nav__task_item_input">
-						<button class="nav__task_item_btn"><img class="nav__task_item_icon" src="icons/plus.svg">
+						<button class="nav__task_item_btn"><img class="nav__task_item_icon" src="icons/plus.svg" alt="Plus mark image on button">
 						</button>
 				</container>
 				<button class="nav__make_task_btn" type="button">Make Task List</button>
