Add functionality for checking off tasks and persisting

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</form>
 		</section>
 		<section class="task__card_display">
-				<h1 class="task__card_placeholder">View Your ToDo Lists Here!</h1>
+				<h1 class="task__card_placeholder">See ToDo Lists Here!</h1>
 		</section>
 </body>
 <script src="todo-list.js"></script>
